package name adjusted

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="de.tenminuteapps.letseat.ListActivity">
+    tools:context="org.seniorlaguna.letseat.ListActivity">
 
     <FrameLayout
         android:id="@+id/list_framelayout"
