--- a/app/src/main/res/layout/activity_show.xml
+++ b/app/src/main/res/layout/activity_show.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="de.tenminuteapps.letseat.ShowActivity">
+    tools:context="org.seniorlaguna.letseat.ShowActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/show_toolbar"
