--- a/app/src/main/res/layout/activity_add_modify.xml
+++ b/app/src/main/res/layout/activity_add_modify.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="de.tenminuteapps.letseat.ListActivity">
+    tools:context="org.seniorlaguna.letseat.ListActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/am_toolbar"
@@ -34,7 +34,7 @@
         android:layout_height="match_parent"
         android:layout_below="@id/am_toolbar"
         android:layout_margin="@dimen/root_margin"
-        tools:context="de.tenminuteapps.letseat.AddActivity">
+        tools:context="org.seniorlaguna.letseat.AddActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
